--- a/saurya/New Template Using Bootstrap/css/style.css
+++ b/saurya/New Template Using Bootstrap/css/style.css
@@ -134,6 +134,8 @@ a:hover{
   background-color: red;
   flex-direction: column;
   justify-content: flex-end;
+  overflow: hidden;
+  position: relative;
   
 }
 .corp-img{
@@ -152,12 +154,15 @@ a:hover{
 }
 
 .trans-capt{
-  display: none;
-  transition: 2s ease;
+  position: absolute;
+  top: 100%;
+  transition: top .5s ease, background-color .5s ease, background-color .5s ease;
 }
 
 .corp-cont:hover .trans-capt{
-  display: block;
+  top: 40%;
+  background-color: green;
+  opacity: .6;
 }
 
 /*##########################################################*/
@@ -172,6 +177,14 @@ a:hover{
 .abt-inds-card{
   /*transform: translateY(-25%);*/
   margin-top: -100px;
+}
+
+.card{
+  transition: transform .5s ease;
+}
+
+.card:hover{
+  transform: scale(1.2, 1.2);
 }
 
 .abt-inds-hr{
@@ -222,7 +235,14 @@ a:hover{
 .csp-block{
   margin-top: 20px;
   margin-bottom: 20px;
+  transition: transform 1.5s ease;
 }
+
+.csp-block:hover{
+  transition: rotate(360deg);
+}
+
+
 .csp-icon{
   display: inline-block;
   width: 25%;
@@ -421,7 +441,45 @@ a:hover{
   padding: 20px;
   clip-path: polygon(0% 100%, 80% 100%, 100% 0%, 0% 0%);
 
+  transition: background-color .5s ease, opacity .5s ease;
+
+
 }
+
+.tag3{
+  transition: transform .5s ease;
+  z-index: 1;
+
+}
+
+.tag3:hover{
+  
+  transform: scale(1.2, 1.2); 
+}
+
+.tag3:hover .pol-1{
+  background-color: lightgrey;
+  opacity: 1;
+}
+
+.tag4{
+  transition: transform .5s ease;
+  z-index: 1;
+
+}
+
+.tag4:hover{
+  
+  transform: scale(1.2, 1.2);
+
+}
+
+.tag4:hover .pol-1{
+  background-color: lightgrey;
+  opacity: 1;
+}
+
+
 
 .pol-1-box{
   width: 100px;
@@ -436,20 +494,37 @@ a:hover{
 
 }
 
-@media all and (max-width: 768px){
+@media(max-width: 768px){
   
   .grid-cont{
     grid-template-columns: 50% 50%;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas: "news tag1"
                          "news tag2"
-                         "tag3 tag3"
+                         "tag3 tag3";
 
   }
 
   .nws-upd-wrp{
     margin-top: -50px;
   }
+}
+
+@media(max-width: 576px){
+  
+  .grid-cont{
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-areas: "news"
+                         "tag1"
+                         "tag2"
+                         "tag3";
+
+  }
+
+  /*.nws-upd-wrp{
+    margin-top: -50px;
+  }*/
 }
 
 .news{
@@ -477,6 +552,7 @@ a:hover{
   width: 100%;
   height: 100%;
   padding: 20px;
+  transition: background-color .5s ease, opacity .5s ease;
   
 }
 
@@ -530,6 +606,16 @@ a:hover{
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 /*4-CARDS*/
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+.four-card-img{
+  transition: transform 1s ease;
+}
+
+.four-card-img:hover{
+  transform: rotate(360deg);
+}
+
+
 
 @media(max-width: 576px){
   .card-img{
