--- a/saurya/New Template Using Bootstrap/css/style.css
+++ b/saurya/New Template Using Bootstrap/css/style.css
@@ -627,13 +627,22 @@ a:hover{
 /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 .four-card-img{
-  transition: transform 1s ease;
+  /*transition: transform 1s ease;*/
   z-index: 1;
+  /*animation: myfirst 5s linear 0s 1 alternate;*/
+
 }
 
 .four-card-img:hover{
-  transform: rotate(360deg);
+  /*transform: rotate(360deg);*/
+  animation: myfirst .5s ease 0s 1 normal;
 
+}
+
+@keyframes myfirst{
+  0% {transform: rotate(0deg); }
+  50% {transform: rotate(15deg);}
+  100% {transform: rotate(0deg);}
 }
 
 
